<resources>
    <string name="app_name">SRMapp</string>
    <string name="user_mail">Usuario o Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Entrar</string>
    <string name="loginLoading">Loading…</string>
    <string name="pref_key_token">PREF_KEY_USER_TOKEN</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password_check">Repite la contraseña</string>
    <string name="signup">Signup</string>
    <string name="form_toggle">Form Toggle</string>
    <string name="logout">Logout</string>
    <string name="singupLoading">Signup Loading …</string>
    <string name="login_signup_status">Login/Signup Status</string>
    <string name="status">Status</string>
    <string name="title_stock">STOCK</string>
    <string name="carne">Carnes</string>
    <string name="lacteos">Lacteos</string>
    <string name="especias">Especias</string>
    <string name="vegetales">Vegetales</string>
    <string name="mariscos">Mariscos</string>
    <string name="cereales">Cereales</string>
    <string name="placeholder_add">add</string>
    <string name="placeholder_find">Find</string>
    <string name="template_title">Title</string>
    <string name="predictions">Predicciones</string>
    <string name="food">Alimentos</string>
    <string name="reservas">Reservas</string>
    <string name="menu">Carta</string>
    <string name="nombre">Nombre</string>
    <string name="cantidad">Cantidad</string>
    <string name="lote">Lote</string>
    <string name="caducidad">Caducidad</string>
    <string name="placeholder_name">Item Name</string>
    <string name="placeholder_quantity">Quantity</string>
    <string name="placeholder_lote">Lote</string>
    <string name="placeholder_caducidad">Caducidad</string>
    <string name="header_title">Title</string>
    <string name="clear_history">Limpiar Historico</string>
    <string name="tap_to_enter">Tap to enter</string>
    <string name="login_register_improve_business">Mejora tu negocio</string>
    <string name="description">Mejora tu negocio con nuestros servicios de predicción, de gestión del stock y muchos más</string>
    <string name="login_account">¿Ya tienes una cuenta?</string>
    <string name="login_user">Inicia sesión</string>
    <string name="register">Registrate</string>
    <string name="login2">Inicio de sesión</string>
    <string name="forget_password">¿Has olvidado la contraseña?</string>
    <string name="session_login">Iniciar sesión</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="new_account">Crear cuenta</string>
    <string name="terms_conditions">Acepto los terminos y condiciones y las Políticas de Privacidad</string>
    <string name="title_receipt">Carta</string>
    <string name="starters">Entrantes</string>
    <string name="starter">Primer plato</string>
    <string name="second">Segundo plato</string>
    <string name="deserts">Postres</string>
    <string name="drinks">Bebidas</string>
    <string name="complements">Complementos</string>
    <string name="exist_account">¿Tienes una cuenta?</string>
    <string name="select_photo">Seleccionar foto</string>
    <string name="a_adir_a_la_carta">Añadir a la carta</string>
    <string name="modificar">Modificar</string>
    <string name="delete">Eliminar</string>
    <string name="selecionar_ingredientes">Selecionar ingredientes</string>
    <string name="food_id_value">1</string>
    <string name="start">Inicio</string>
    <string name="show_history">Mostrar historial</string>
    <string name="category">Categoria del alimento</string>
    <string name="unit">Unidades</string>
    <string name="food_name">Nombre</string>
    <string name="add_food">Añadir alimento</string>
    <string name="entrantes">Entrantes</string>
    <string name="first_plate">1r Plato</string>
    <string name="second_plate">2o Plato</string>
    <string name="postres">Postres</string>
    <string name="bebidas">Bebidas</string>
    <string name="complementos">Complementos</string>
    <string name="error_type">Error type</string>
    <string name="Carta">Carta</string>
    <string name="show_stock">Mostrar stock</string>
    <string name="add_stock">Añadir stock</string>
    <string name="quantity">Cantidad</string>
    <string name="price">Precio</string>
    <string name="add_recipe">Añadir plato</string>
    <string name="mod_recipe">Modificar plato</string>
    <string name="preu_euros">Precio €</string>
    <string name="recipe_name">Nombre</string>
    <string name="no_items_to_search">No hay elementos para buscar</string>
    <string name="show_ingredients">Mostrar ingredients</string>
    <string name="pedidos">Pedidos</string>
    <string name="add_booking">Añadir reserva</string>
    <string name="mod_booking">Modificar reserva</string>
    <string name="amount_of_people">Número de personas</string>
    <string name="amount_of_people_short">Personas</string>
    <string name="date">Fecha</string>
    <string name="tel">Teléfono</string>
    <string name="mail">Correo Electrónico</string>
    <string name="table">Mesa</string>
    <string name="mostrar_reserva">Mostrar Reserva</string>
    <string name="Editar">Editar Reserva</string>
    <string name="mod_menu">Editar Recepta</string>
    <string name="cancelled">Cancelled</string>
    <string name="confirmed">Confirmed</string>
    <string name="delievered">Delievered</string>
    <string name="inprocess">In process</string>
    <string name="paid">Paid</string>
    <string name="waiting">Waiting</string>
    <string name="all">All</string>
    <string name="EditarStock">Editar Stock</string>
    <string name="mod_stock">Modificar Stock</string>
    <string name="festivo_o_no">Día festivo</string>
    <string name="send">Enviar</string>
    <string name="retraining">Reentrenar</string>
    <string name="unidades">Unidades</string>
    <string name="edit_food">Editar aliment</string>
    <string name="negativeButton">No</string>
    <string name="affirmativeButton">Si</string>
    <string name="available">Disponible</string>
    <string name="unavailable">No disponible</string>
    <string name="Unidades">Unidades</string>
    <string name="Fecha">Caducidad</string>
</resources>