<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    >

    <ImageButton
        android:id="@+id/btback"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="-80dp"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/back_arrow"
        />

    <TextView
        android:id="@+id/tvTitleReceipt"
        android:text="@string/title_receipt"
        android:textSize="@dimen/title_size"
        android:layout_width="wrap_content"
        android:textColor="#291B1B"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btEntrantes"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="-100dp"
        android:backgroundTint="#291B1B"
        android:text="@string/starters" />


    <Button
        android:id="@+id/btPrimerPlato"
        android:text="@string/starter"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="-80dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="#291B1B"
        />

    <Button
        android:id="@+id/btSegundoPlato"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="-100dp"
        android:backgroundTint="#291B1B"
        android:text="@string/second" />


    <Button
        android:id="@+id/btPostres"
        android:text="@string/deserts"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="-80dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="#291B1B"/>

    <Button
        android:id="@+id/btBebidas"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="-100dp"
        android:backgroundTint="#291B1B"
        android:text="@string/drinks" />

    <Button
        android:id="@+id/btComplementos"
        android:text="@string/complements"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="-80dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="#291B1B"/>

</LinearLayout>