<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/formLogin"
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginTop="-60dp"
                android:text="@string/login2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/edUsername"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/user_mail"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center" />

        <EditText
                android:id="@+id/edPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textAlignment="center" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/forget_password"
                android:textColor="#3D4545" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="-30dp"
                android:text="@string/forget_account"
                android:textAlignment="center" />

        <Button
                android:id="@+id/btGoToSignUp"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="-35dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/login2"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        <Button
                android:id="@+id/btLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:backgroundTint="#3D4545"
                android:text="@string/session_login"
                android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/formSignup"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="300dp"
            android:visibility="visible"
            android:layout_height="500dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/new_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginTop="-70dp"
                android:textSize="25sp"
                android:textStyle="bold" />

        <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/edName"
                android:hint="@string/name"
                android:inputType="text"
                android:layout_marginTop="60dp"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:background="@drawable/edit_text_border" />

        <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/edEmail"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:background="@drawable/edit_text_border" />

        <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/edPasswordSignup"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:importantForAutofill="no"
                android:background="@drawable/edit_text_border"
                android:textAlignment="center" />

        <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/edPasswordSignupCheck"
                android:hint="@string/password_check"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:importantForAutofill="no"
                android:background="@drawable/edit_text_border"
                android:textAlignment="center" />

        <CheckBox
                android:id="@+id/cbTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions"
                android:layout_marginTop="30dp"
                android:textColor="#646161" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="-30dp"
                android:text="@string/forget_account"
                android:textAlignment="center" />

        <Button
                android:id="@+id/btGoToLogin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="-35dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btSignup"
                android:layout_marginTop="30dp"
                android:text="@string/new_account"
                android:backgroundTint="#3D4545"
                android:textAllCaps="false" />

    </LinearLayout>


    <Button
            android:text="@string/logout"
            android:id="@+id/btLogout"
            android:layout_marginTop="-70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3D4545"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLoginStatus"
            android:text="@string/login_signup_status" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStatus"
            android:text="@string/status" />
</LinearLayout>