<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFind"
            android:text="@string/placeholder_find"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:backgroundTint="#FFFFFF"
            android:textColor="#291B1B"
            app:layout_constraintEnd_toStartOf="@+id/tvStockTitle"
            app:layout_constraintTop_toTopOf="@+id/tvStockTitle" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#291B1B"
        android:text="@string/placeholder_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvStockTitle"
        app:layout_constraintTop_toTopOf="@+id/tvStockTitle" />

    <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/carne"
            android:id="@+id/tvStockTitle"
            app:layout_constraintStart_toEndOf="@+id/btnFind"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btAdd"
            android:background="#291B1B"
            android:textColor="#FFFFFF"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textStyle="normal"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:text="@string/cantidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/tvStockTitle" />

    <TextView
            android:text="@string/lote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="0dp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
            android:text="@string/nombre"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/textView2"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:text="@string/caducidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="0dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="390dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:listitem="@layout/rv_item_stock" />


</androidx.constraintlayout.widget.ConstraintLayout>