<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="11dp"
        android:src="@drawable/undraw_login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/login_register_improve_business"
        android:layout_marginTop="300dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="400dp"
        android:textAlignment="center"
        android:textColor="#2F2D2D"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/description"
        android:layout_marginTop="350dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="330dp"
        android:textAlignment="center"
        android:textColor="#646161"
        android:textStyle="italic"
        android:textSize="14sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/login_account"
        android:layout_marginTop="420dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="290dp"
        android:textColor="#646161"
        android:textStyle="italic"
        android:textSize="14sp"
        />


    <Button
        android:id="@+id/btLoginSession"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="281dp"
        android:backgroundTint="#FFFFFF"
        android:color="#FFFFFF"
        android:text="@string/login_user"
        android:textAllCaps="false"
        android:textColor="#3D4545"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3D4545"
        android:text="@string/register"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="502dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>