<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/imselectphoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/menu_item" />

    <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/select_photo"
            android:textAlignment="center" />

    <EditText
            android:layout_marginTop="50dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Nombre"
            android:background="@drawable/edit_text_border"
            android:inputType="text"
            android:id="@+id/etCartaName"
            android:importantForAutofill="no"
            android:textAlignment="center" />


    <EditText
            android:layout_width="300dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="Precio"
            android:background="@drawable/edit_text_border"
            android:id="@+id/etCartaPrice"
            android:importantForAutofill="no"
            android:textAlignment="center" />

    <Button
            android:layout_width="300dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSelectFood"
            android:text="@string/selecionar_ingredientes"
            android:importantForAutofill="no"
            android:textAlignment="center" />

    <Button
            android:id="@+id/btCartaAddOrMod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_adir_a_la_carta"
            android:layout_marginTop="30dp"
            android:backgroundTint="#291B1B" />

    <Button
            android:id="@+id/btCartaDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:backgroundTint="#9F1E1E" />

</LinearLayout>